--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,5 @@ MONGODB_URL  = mongodb+srv://Yomal:36DAthgwe2HCV4Rn@cluster0.45wd35j.mongodb.net
 JWT_SECRET_KEY  = Yomal
 PORT  = 8800
 AUTH_EMAIL  = yomaldulanjana00@gmail.com
-AUTH_PASSWORD  = Emalka19940$
+AUTH_PASSWORD  = 
 APP_URL  =  http://localhost:8800/api-v1
