--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@cloudinary/url-gen": "^1.14.0",
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.15",
+    "@mdbootstrap/react-testimonial-slider": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "mdb-react-ui-kit": "^7.0.0",
     "moment": "^2.29.4",
     "motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.45.1",
