--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-# MONGODB_URL  = mongodb+srv://Yomal:36DAthgwe2HCV4Rn@cluster0.45wd35j.mongodb.net/jobfinder_DB
-MONGODB_URL  = mongodb+srv://web:Yomal19940@web-01.dgz0g3z.mongodb.net/jobfinder_DB
+MONGODB_URL  = mongodb+srv://Yomal:36DAthgwe2HCV4Rn@cluster0.45wd35j.mongodb.net/jobfinder_DB
+# MONGODB_URL  = mongodb+srv://web:Yomal19940@web-01.dgz0g3z.mongodb.net/jobfinder_DB
 JWT_SECRET_KEY  = Yomal
 PORT  = 8800
 AUTH_EMAIL  = yomaldulanjana00@gmail.com
