--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,11 @@
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
+    "react-particles": "^2.12.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
