--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-particles": "^2.12.2",
+    "react-phone-number-input": "^3.3.8",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "sweetalert2": "^11.10.1",
